Enhanced Financial Dashboard with intelligent Savings Optimizer
- Added real-time adjustable savings target slider (10-90%)
- Implemented maximum achievable savings rate calculator
- Added visual MAX indicator on slider showing realistic limits
- Created detailed expense breakdown (Essential vs Cuttable)
- Added context-aware hints and warnings for impossible targets
- Simplified and tightened entire dashboard layout
- Reduced spacing and padding throughout for compact design
- Enhanced all sections with cleaner, more organized UI
- Improved mobile responsiveness
- All features update in real-time as slider moves

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="dashboard-styles.css">
     <link rel="stylesheet" href="ui-enhancements.css">
+    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 </head>
 <body>
     <!-- Promotional Banner - Sticky Buzzoid-style -->
@@ -254,7 +255,7 @@
                             <span class="security-icon-large">🔒</span>
                             <div>
                                 <strong>100% Secure & Private</strong>
-                                <p>Files processed locally in your browser. Never uploaded to servers.</p>
+                                <p>Your files are processed securely via our API. We never store your financial data.</p>
                             </div>
                         </div>
                     </div>
