--- a/dashboard.html
+++ b/dashboard.html
@@ -619,6 +619,15 @@
     <!-- Back to Top Button -->
     <button class="back-to-top" id="backToTop" title="Back to top">↑</button>
 
+    <!-- Global Error Handler -->
+    <script>
+        window.addEventListener('error', function(e) {
+            console.error('Global error:', e.error);
+        });
+        window.addEventListener('unhandledrejection', function(e) {
+            console.error('Unhandled promise rejection:', e.reason);
+        });
+    </script>
     <script type="module" src="ui-interactions.js"></script>
     <script type="module" src="quick-start-guide.js"></script>
     <script type="module" src="script.js"></script>
