Reorganize project structure: css/, js/, samples/ folders

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <meta name="twitter:title" content="About StatementProMax - Secure Bank Statement Converter">
     <meta name="twitter:description" content="Learn about StatementProMax's mission to provide secure, accurate bank statement conversion with powerful financial analysis tools.">
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -209,7 +209,7 @@
         </div>
     </footer>
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
 
