--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - Bank Statement Converter Tips & Guides</title>
     <meta name="description" content="Learn tips, tricks, and best practices for managing your bank statements and financial data.">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <style>
         /* Additional blog-specific styles */
         .blog-hero {
@@ -645,7 +645,7 @@
         </div>
     </footer>
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="js/script.js"></script>
     <script>
         // Category filtering
         const categoryTags = document.querySelectorAll('.category-tag');
