--- a/dashboard.html
+++ b/dashboard.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Financial Dashboard - StatementProMax</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="dashboard-styles.css">
-    <link rel="stylesheet" href="ui-enhancements.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/dashboard-styles.css">
+    <link rel="stylesheet" href="css/ui-enhancements.css">
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 </head>
@@ -628,10 +628,10 @@
             console.error('Unhandled promise rejection:', e.reason);
         });
     </script>
-    <script type="module" src="ui-interactions.js"></script>
-    <script type="module" src="quick-start-guide.js"></script>
-    <script type="module" src="script.js"></script>
-    <script type="module" src="dashboard.js"></script>
+    <script type="module" src="js/ui-interactions.js"></script>
+    <script type="module" src="js/quick-start-guide.js"></script>
+    <script type="module" src="js/script.js"></script>
+    <script type="module" src="js/dashboard.js"></script>
 </body>
 </html>
 
