--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <meta name="twitter:title" content="Contact Us - StatementProMax Support">
     <meta name="twitter:description" content="Get in touch with StatementProMax. Our team is here to help with your PDF conversion and financial analysis needs.">
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -225,7 +225,7 @@
         </div>
     </footer>
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="js/script.js"></script>
     <script>
         // Handle contact form submission
         document.getElementById('contactForm').addEventListener('submit', function(e) {
