--- a/terms.html
+++ b/terms.html
@@ -6,7 +6,7 @@
     <title>Terms of Service - StatementProMax</title>
     <meta name="description" content="Review StatementProMax's terms of service and user agreement.">
     <meta name="robots" content="noindex, nofollow">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <nav class="nav">
@@ -122,7 +122,7 @@
         </div>
     </footer>
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
 
