Fix navigation layout shift between pages - show signInBtn by default, remove backdrop blur

--- a/dashboard.html
+++ b/dashboard.html
@@ -39,7 +39,7 @@
                     <a href="dashboard.html" class="active">Financial Dashboard</a>
                 </div>
                 <div class="nav-auth">
-                    <button class="btn-auth" id="signInBtn" style="display: none;">
+                    <button class="btn-auth" id="signInBtn">
                         <span id="authButtonText">Sign In</span>
                     </button>
                     <div class="user-menu" id="userMenu" style="display: none;">
