--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href="dashboard.html">Financial Dashboard</a>
                 </div>
                 <div class="nav-auth">
-                    <button class="btn-auth" id="signInBtn" style="display: none;">
+                    <button class="btn-auth" id="signInBtn">
                         <span id="authButtonText">Sign In</span>
                     </button>
                     <div class="user-menu" id="userMenu" style="display: none;">
