--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                     <a href="contact.html">Contact</a>
                 </div>
                 <div class="nav-auth">
-                    <button class="btn-auth" id="signInBtn" style="display: none;">
+                    <button class="btn-auth" id="signInBtn">
                         <span id="authButtonText">Sign In</span>
                     </button>
                     <div class="user-menu" id="userMenu" style="display: none;">
