--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                     <a href="contact.html" class="active">Contact</a>
                 </div>
                 <div class="nav-auth">
-                    <button class="btn-auth" id="signInBtn" style="display: none;">
+                    <button class="btn-auth" id="signInBtn">
                         <span id="authButtonText">Sign In</span>
                     </button>
                     <div class="user-menu" id="userMenu" style="display: none;">
