Redesign dashboard header - compact, efficient layout with icon buttons

--- a/dashboard.html
+++ b/dashboard.html
@@ -381,17 +381,17 @@
 
                 <!-- Dashboard Section (Hidden initially) -->
             <div class="dashboard-content" id="dashboardContent" style="display: none;">
-                <!-- Header -->
+                <!-- Header - Compact Design -->
                 <div class="dashboard-header">
-                    <div>
+                    <div class="dashboard-header-left">
                         <h1>Financial Overview</h1>
-                        <p class="dashboard-subtitle"><span id="fileName"></span></p>
+                        <span class="dashboard-file-badge" id="fileName"></span>
                     </div>
                     <div class="dashboard-header-actions">
-                        <button class="btn-outline" id="viewHistoryBtn">📁 History</button>
-                        <button class="btn-outline" id="manageLearnedBtn">🎓 Patterns</button>
-                        <button class="btn-primary" id="exportToExcelBtn">📊 Export</button>
-                        <button class="btn-outline" id="uploadNewBtn">Upload New</button>
+                        <button class="btn-icon-sm" id="viewHistoryBtn" title="View History">📁</button>
+                        <button class="btn-icon-sm" id="manageLearnedBtn" title="Learned Patterns">🎓</button>
+                        <button class="btn-icon-sm" id="uploadNewBtn" title="Upload New File">📤</button>
+                        <button class="btn-primary-sm" id="exportToExcelBtn">📊 Export</button>
                     </div>
                 </div>
 
