Reorganize HTML files into pages/ folder for better structure

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - Bank Statement Converter Tips & Guides</title>
     <meta name="description" content="Learn tips, tricks, and best practices for managing your bank statements and financial data.">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <style>
         /* Additional blog-specific styles */
         .blog-hero {
@@ -387,7 +387,7 @@
     <nav class="nav">
         <div class="container">
             <div class="nav-content">
-                <a href="index.html" class="logo-link">
+                <a href="../index.html" class="logo-link">
                     <div class="logo">
                         <div class="logo-icon-wrapper">
                             <svg class="logo-icon-svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
@@ -402,8 +402,8 @@
                     </div>
                 </a>
                 <div class="nav-links">
-                    <a href="index.html">Converter</a>
-                    <a href="dashboard.html">Financial Dashboard</a>
+                    <a href="../index.html">Converter</a>
+                    <a href="../dashboard.html">Financial Dashboard</a>
                     <a href="blog.html" class="active">Blog</a>
                 </div>
             </div>
@@ -592,7 +592,7 @@
                     <div class="sidebar-section" style="background: linear-gradient(135deg, #FFF5F5 0%, #FFEBEB 100%); text-align: center; border: 2px solid #FFD6D6;">
                         <h3 style="color: #FF6B6B;">Try Our Converter</h3>
                         <p style="margin-bottom: 20px; color: #4a4a4a;">Convert your bank statements to Excel in seconds.</p>
-                        <a href="index.html" class="btn-primary" style="display: inline-block; text-decoration: none;">Get Started Free</a>
+                        <a href="../index.html" class="btn-primary" style="display: inline-block; text-decoration: none;">Get Started Free</a>
                     </div>
                 </aside>
             </div>
@@ -606,8 +606,8 @@
             <div class="footer-links-row">
                 <div class="footer-links-group">
                     <h4>Product</h4>
-                    <a href="index.html">Converter</a>
-                    <a href="dashboard.html">Dashboard</a>
+                    <a href="../index.html">Converter</a>
+                    <a href="../dashboard.html">Dashboard</a>
                     <a href="blog.html">Blog</a>
                 </div>
                 <div class="footer-links-group">
@@ -645,7 +645,7 @@
         </div>
     </footer>
 
-    <script type="module" src="js/script.js"></script>
+    <script type="module" src="../js/script.js"></script>
     <script>
         // Category filtering
         const categoryTags = document.querySelectorAll('.category-tag');
