--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -12,14 +12,14 @@
     <meta name="robots" content="noindex, nofollow">
     <link rel="canonical" href="https://statementpro.com/privacy.html">
     
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="nav">
         <div class="container">
             <div class="nav-content">
-                <a href="index.html" class="logo-link">
+                <a href="../index.html" class="logo-link">
                     <div class="logo">
                         <div class="logo-icon-wrapper">
                             <svg class="logo-icon-svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
@@ -34,8 +34,8 @@
                     </div>
                 </a>
                 <div class="nav-links">
-                    <a href="index.html">Converter</a>
-                    <a href="dashboard.html">Dashboard</a>
+                    <a href="../index.html">Converter</a>
+                    <a href="../dashboard.html">Dashboard</a>
                     <a href="blog.html">Blog</a>
                     <a href="about.html">About</a>
                     <a href="contact.html">Contact</a>
@@ -162,8 +162,8 @@
             <div class="footer-links-row">
                 <div class="footer-links-group">
                     <h4>Product</h4>
-                    <a href="index.html">Converter</a>
-                    <a href="dashboard.html">Dashboard</a>
+                    <a href="../index.html">Converter</a>
+                    <a href="../dashboard.html">Dashboard</a>
                     <a href="blog.html">Blog</a>
                 </div>
                 <div class="footer-links-group">
@@ -201,7 +201,7 @@
         </div>
     </footer>
 
-    <script type="module" src="js/script.js"></script>
+    <script type="module" src="../js/script.js"></script>
 </body>
 </html>
 
