--- a/pages/security.html
+++ b/pages/security.html
@@ -23,7 +23,7 @@
     <meta name="twitter:title" content="Security & Data Protection - StatementProMax">
     <meta name="twitter:description" content="Your data security is our priority. Learn about StatementProMax's encryption, local processing, and security measures.">
     
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -44,7 +44,7 @@
     <nav class="nav">
         <div class="container">
             <div class="nav-content">
-                <a href="index.html" class="logo-link">
+                <a href="../index.html" class="logo-link">
                     <div class="logo">
                         <div class="logo-icon-wrapper">
                             <svg class="logo-icon-svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
@@ -59,8 +59,8 @@
                     </div>
                 </a>
                 <div class="nav-links">
-                    <a href="index.html">Converter</a>
-                    <a href="dashboard.html">Dashboard</a>
+                    <a href="../index.html">Converter</a>
+                    <a href="../dashboard.html">Dashboard</a>
                     <a href="blog.html">Blog</a>
                     <a href="about.html">About</a>
                     <a href="contact.html">Contact</a>
@@ -255,8 +255,8 @@
             <div class="footer-links-row">
                 <div class="footer-links-group">
                     <h4>Product</h4>
-                    <a href="index.html">Converter</a>
-                    <a href="dashboard.html">Dashboard</a>
+                    <a href="../index.html">Converter</a>
+                    <a href="../dashboard.html">Dashboard</a>
                     <a href="blog.html">Blog</a>
                 </div>
                 <div class="footer-links-group">
@@ -294,7 +294,7 @@
         </div>
     </footer>
 
-    <script type="module" src="js/script.js"></script>
+    <script type="module" src="../js/script.js"></script>
 </body>
 </html>
 
