--- a/index.html
+++ b/index.html
@@ -380,18 +380,18 @@
                     <h4>Product</h4>
                     <a href="index.html">Converter</a>
                     <a href="dashboard.html">Financial Dashboard</a>
-                    <a href="blog.html">Blog</a>
+                    <a href="pages/blog.html">Blog</a>
                 </div>
                 <div class="footer-links-group">
                     <h4>Company</h4>
-                    <a href="about.html">About</a>
-                    <a href="contact.html">Contact</a>
-                    <a href="security.html">Security</a>
+                    <a href="pages/about.html">About</a>
+                    <a href="pages/contact.html">Contact</a>
+                    <a href="pages/security.html">Security</a>
                 </div>
                 <div class="footer-links-group">
                     <h4>Legal</h4>
-                    <a href="privacy.html">Privacy</a>
-                    <a href="terms.html">Terms</a>
+                    <a href="pages/privacy.html">Privacy</a>
+                    <a href="pages/terms.html">Terms</a>
                 </div>
             </div>
             
