--- a/pages/about.html
+++ b/pages/about.html
@@ -23,7 +23,7 @@
     <meta name="twitter:title" content="About StatementProMax - Secure Bank Statement Converter">
     <meta name="twitter:description" content="Learn about StatementProMax's mission to provide secure, accurate bank statement conversion with powerful financial analysis tools.">
     
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -47,7 +47,7 @@
     <nav class="nav">
         <div class="container">
             <div class="nav-content">
-                <a href="index.html" class="logo-link">
+                <a href="../index.html" class="logo-link">
                     <div class="logo">
                         <div class="logo-icon-wrapper">
                             <svg class="logo-icon-svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
@@ -62,8 +62,8 @@
                     </div>
                 </a>
                 <div class="nav-links">
-                    <a href="index.html">Converter</a>
-                    <a href="dashboard.html">Dashboard</a>
+                    <a href="../index.html">Converter</a>
+                    <a href="../dashboard.html">Dashboard</a>
                     <a href="blog.html">Blog</a>
                     <a href="about.html" class="active">About</a>
                     <a href="contact.html">Contact</a>
@@ -158,7 +158,7 @@
             <div class="cta-content">
                 <h2>Ready to Get Started?</h2>
                 <p>Experience secure, fast bank statement conversion today.</p>
-                <a href="index.html" class="btn-primary-large">Try StatementProMax Free</a>
+                <a href="../index.html" class="btn-primary-large">Try StatementProMax Free</a>
             </div>
         </div>
     </section>
@@ -170,8 +170,8 @@
             <div class="footer-links-row">
                 <div class="footer-links-group">
                     <h4>Product</h4>
-                    <a href="index.html">Converter</a>
-                    <a href="dashboard.html">Dashboard</a>
+                    <a href="../index.html">Converter</a>
+                    <a href="../dashboard.html">Dashboard</a>
                     <a href="blog.html">Blog</a>
                 </div>
                 <div class="footer-links-group">
@@ -209,7 +209,7 @@
         </div>
     </footer>
 
-    <script type="module" src="js/script.js"></script>
+    <script type="module" src="../js/script.js"></script>
 </body>
 </html>
 
