--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,7 +23,7 @@
     <meta name="twitter:title" content="Contact Us - StatementProMax Support">
     <meta name="twitter:description" content="Get in touch with StatementProMax. Our team is here to help with your PDF conversion and financial analysis needs.">
     
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -41,7 +41,7 @@
     <nav class="nav">
         <div class="container">
             <div class="nav-content">
-                <a href="index.html" class="logo-link">
+                <a href="../index.html" class="logo-link">
                     <div class="logo">
                         <div class="logo-icon-wrapper">
                             <svg class="logo-icon-svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
@@ -56,8 +56,8 @@
                     </div>
                 </a>
                 <div class="nav-links">
-                    <a href="index.html">Converter</a>
-                    <a href="dashboard.html">Dashboard</a>
+                    <a href="../index.html">Converter</a>
+                    <a href="../dashboard.html">Dashboard</a>
                     <a href="blog.html">Blog</a>
                     <a href="about.html">About</a>
                     <a href="contact.html" class="active">Contact</a>
@@ -186,8 +186,8 @@
             <div class="footer-links-row">
                 <div class="footer-links-group">
                     <h4>Product</h4>
-                    <a href="index.html">Converter</a>
-                    <a href="dashboard.html">Dashboard</a>
+                    <a href="../index.html">Converter</a>
+                    <a href="../dashboard.html">Dashboard</a>
                     <a href="blog.html">Blog</a>
                 </div>
                 <div class="footer-links-group">
@@ -225,7 +225,7 @@
         </div>
     </footer>
 
-    <script type="module" src="js/script.js"></script>
+    <script type="module" src="../js/script.js"></script>
     <script>
         // Handle contact form submission
         document.getElementById('contactForm').addEventListener('submit', function(e) {
