--- a/pages/terms.html
+++ b/pages/terms.html
@@ -6,13 +6,13 @@
     <title>Terms of Service - StatementProMax</title>
     <meta name="description" content="Review StatementProMax's terms of service and user agreement.">
     <meta name="robots" content="noindex, nofollow">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <nav class="nav">
         <div class="container">
             <div class="nav-content">
-                <a href="index.html" class="logo-link">
+                <a href="../index.html" class="logo-link">
                     <div class="logo">
                         <div class="logo-icon-wrapper">
                             <svg class="logo-icon-svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
@@ -27,8 +27,8 @@
                     </div>
                 </a>
                 <div class="nav-links">
-                    <a href="index.html">Converter</a>
-                    <a href="dashboard.html">Dashboard</a>
+                    <a href="../index.html">Converter</a>
+                    <a href="../dashboard.html">Dashboard</a>
                     <a href="blog.html">Blog</a>
                     <a href="about.html">About</a>
                     <a href="contact.html">Contact</a>
@@ -83,8 +83,8 @@
             <div class="footer-links-row">
                 <div class="footer-links-group">
                     <h4>Product</h4>
-                    <a href="index.html">Converter</a>
-                    <a href="dashboard.html">Dashboard</a>
+                    <a href="../index.html">Converter</a>
+                    <a href="../dashboard.html">Dashboard</a>
                     <a href="blog.html">Blog</a>
                 </div>
                 <div class="footer-links-group">
@@ -122,7 +122,7 @@
         </div>
     </footer>
 
-    <script type="module" src="js/script.js"></script>
+    <script type="module" src="../js/script.js"></script>
 </body>
 </html>
 
