Reorganize: css/js/samples into assets/, deploy script into scripts/

--- a/pages/security.html
+++ b/pages/security.html
@@ -23,7 +23,7 @@
     <meta name="twitter:title" content="Security & Data Protection - StatementProMax">
     <meta name="twitter:description" content="Your data security is our priority. Learn about StatementProMax's encryption, local processing, and security measures.">
     
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
     
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -294,7 +294,7 @@
         </div>
     </footer>
 
-    <script type="module" src="../js/script.js"></script>
+    <script type="module" src="../assets/js/script.js"></script>
 </body>
 </html>
 
