--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="noindex, nofollow">
     <link rel="canonical" href="https://statementpro.com/privacy.html">
     
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -201,7 +201,7 @@
         </div>
     </footer>
 
-    <script type="module" src="../js/script.js"></script>
+    <script type="module" src="../assets/js/script.js"></script>
 </body>
 </html>
 
