--- a/pages/blog.html
+++ b/pages/blog.html
@@ -383,6 +383,15 @@
     </style>
 </head>
 <body>
+    <!-- Promotional Banner - Permanent -->
+    <div class="promo-banner">
+        <div class="promo-content">
+            <span class="promo-icon">📊</span>
+            <span class="promo-text">New <strong>Financial Dashboard</strong> - Track spending & detect recurring payments!</span>
+            <a href="../dashboard.html" class="promo-cta">Try Now →</a>
+        </div>
+    </div>
+
     <!-- Navigation -->
     <nav class="nav">
         <div class="container">
