--- a/dashboard.html
+++ b/dashboard.html
@@ -11,6 +11,15 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 </head>
 <body>
+    <!-- Promotional Banner - Permanent -->
+    <div class="promo-banner promo-banner-active">
+        <div class="promo-content">
+            <span class="promo-icon">📊</span>
+            <span class="promo-text">New <strong>Financial Dashboard</strong> - Track spending & detect recurring payments!</span>
+            <span class="promo-current">✓ You're Here</span>
+        </div>
+    </div>
+
     <!-- Navigation -->
     <nav class="nav">
         <div class="container">
