--- a/pages/terms.html
+++ b/pages/terms.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
+    <!-- Promotional Banner - Permanent -->
+    <div class="promo-banner">
+        <div class="promo-content">
+            <span class="promo-icon">📊</span>
+            <span class="promo-text">New <strong>Financial Dashboard</strong> - Track spending & detect recurring payments!</span>
+            <a href="../dashboard.html" class="promo-cta">Try Now →</a>
+        </div>
+    </div>
+
     <nav class="nav">
         <div class="container">
             <div class="nav-content">
