Fix navigation layout shift when logged in
- Replace display:none/block with visibility-based CSS classes
- Add .auth-hidden class that uses visibility and opacity
- Prevents content jumping when navigating between pages while logged in
- Set fixed min-width on nav-auth to reserve consistent space
- Add max-width and text-overflow on user email to prevent overflow

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <button class="btn-auth" id="signInBtn">
                         <span id="authButtonText">Sign In</span>
                     </button>
-                    <div class="user-menu" id="userMenu" style="display: none;">
+                    <div class="user-menu auth-hidden" id="userMenu">
                         <button class="user-menu-btn" id="userMenuBtn">
                             <span id="userEmail"></span>
                             <span class="dropdown-arrow">▼</span>
