Fix flash of unauthenticated content when navigating between pages
- Cache auth state in localStorage when user logs in/out
- Add inline script that runs immediately on page load to check cached state
- Apply auth-cached CSS class to html element before page renders
- Pre-populate user email from cache to prevent flash
- Cache expires after 24 hours for security

--- a/dashboard.html
+++ b/dashboard.html
@@ -9,8 +9,36 @@
     <link rel="stylesheet" href="assets/css/ui-enhancements.css">
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+    <!-- Instant auth state check - prevents flash of unauthenticated content -->
+    <script>
+        (function() {
+            try {
+                var cached = localStorage.getItem('cachedAuthUser');
+                if (cached) {
+                    var data = JSON.parse(cached);
+                    if (data && data.email && (Date.now() - data.timestamp) < 86400000) {
+                        window.__authCached = data.email.split('@')[0];
+                        document.documentElement.classList.add('auth-cached');
+                    }
+                }
+            } catch(e) {}
+        })();
+    </script>
+    <style>
+        .auth-cached #signInBtn { visibility: hidden !important; opacity: 0 !important; position: absolute !important; pointer-events: none !important; }
+        .auth-cached #userMenu { visibility: visible !important; opacity: 1 !important; position: relative !important; pointer-events: auto !important; }
+        .auth-cached .auth-hidden { visibility: visible !important; opacity: 1 !important; position: relative !important; pointer-events: auto !important; }
+    </style>
 </head>
 <body>
+    <script>
+        if (window.__authCached) {
+            document.addEventListener('DOMContentLoaded', function() {
+                var el = document.getElementById('userEmail');
+                if (el && !el.textContent) el.textContent = window.__authCached;
+            });
+        }
+    </script>
     <!-- Promotional Banner - Permanent -->
     <div class="promo-banner promo-banner-active">
         <div class="promo-content">
