--- a/pages/about.html
+++ b/pages/about.html
@@ -41,8 +41,36 @@
         }
     }
     </script>
+    <!-- Instant auth state check - prevents flash of unauthenticated content -->
+    <script>
+        (function() {
+            try {
+                var cached = localStorage.getItem('cachedAuthUser');
+                if (cached) {
+                    var data = JSON.parse(cached);
+                    if (data && data.email && (Date.now() - data.timestamp) < 86400000) {
+                        window.__authCached = data.email.split('@')[0];
+                        document.documentElement.classList.add('auth-cached');
+                    }
+                }
+            } catch(e) {}
+        })();
+    </script>
+    <style>
+        .auth-cached #signInBtn { visibility: hidden !important; opacity: 0 !important; position: absolute !important; pointer-events: none !important; }
+        .auth-cached #userMenu { visibility: visible !important; opacity: 1 !important; position: relative !important; pointer-events: auto !important; }
+        .auth-cached .auth-hidden { visibility: visible !important; opacity: 1 !important; position: relative !important; pointer-events: auto !important; }
+    </style>
 </head>
 <body>
+    <script>
+        if (window.__authCached) {
+            document.addEventListener('DOMContentLoaded', function() {
+                var el = document.getElementById('userEmail');
+                if (el && !el.textContent) el.textContent = window.__authCached;
+            });
+        }
+    </script>
     <!-- Promotional Banner - Permanent -->
     <div class="promo-banner">
         <div class="promo-content">
