Major performance optimization - remove all debug logs and fix auth UI
Auth UI Fix:
- Use document.write to instantly apply correct auth state on page load
- Remove visibility-based approach, use simple display:none/block
- Pre-set user email from localStorage cache before JS loads
- No more flash when navigating between pages while logged in

Debug Cleanup:
- Remove all console.log statements from dashboard.js
- Remove all console.log statements from transaction-db.js
- Disable diagnostic logging functions (kept for debugging if needed)
- Remove redundant console.warn for already-initialized checks

CSS Cleanup:
- Remove auth-hidden CSS classes (no longer used)
- Keep only functional spin animation for loading states
- Remove transition:none overrides where not needed

Result: Faster page loads, no visual glitches, clean console output

--- a/index.html
+++ b/index.html
@@ -8,37 +8,30 @@
     <link rel="stylesheet" href="assets/css/dashboard-styles.css">
     <link rel="stylesheet" href="assets/css/ui-enhancements.css">
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-    <!-- Instant auth state check - prevents flash of unauthenticated content -->
+    <!-- Instant auth state - no flash, no animations -->
     <script>
         (function() {
             try {
                 var cached = localStorage.getItem('cachedAuthUser');
                 if (cached) {
                     var data = JSON.parse(cached);
-                    // Only use cache if less than 24 hours old
                     if (data && data.email && (Date.now() - data.timestamp) < 86400000) {
                         window.__authCached = data.email.split('@')[0];
-                        document.documentElement.classList.add('auth-cached');
                     }
                 }
             } catch(e) {}
         })();
     </script>
     <style>
-        /* Hide both auth elements initially, then show correct one based on cached state */
-        .auth-cached #signInBtn { visibility: hidden !important; opacity: 0 !important; position: absolute !important; pointer-events: none !important; }
-        .auth-cached #userMenu { visibility: visible !important; opacity: 1 !important; position: relative !important; pointer-events: auto !important; }
-        .auth-cached .auth-hidden { visibility: visible !important; opacity: 1 !important; position: relative !important; pointer-events: auto !important; }
+        /* Instant auth display - no transitions, no delays */
+        #signInBtn, #userMenu { transition: none !important; }
     </style>
 </head>
 <body>
-    <!-- Set cached email immediately after body opens -->
     <script>
+        // Set auth UI immediately before any rendering
         if (window.__authCached) {
-            document.addEventListener('DOMContentLoaded', function() {
-                var el = document.getElementById('userEmail');
-                if (el && !el.textContent) el.textContent = window.__authCached;
-            });
+            document.write('<style>#signInBtn{display:none!important}#userMenu{display:block!important}</style>');
         }
     </script>
     <!-- Promotional Banner - Permanent -->
@@ -81,7 +74,7 @@
                     <button class="btn-auth" id="signInBtn">
                         <span id="authButtonText">Sign In</span>
                     </button>
-                    <div class="user-menu auth-hidden" id="userMenu">
+                    <div class="user-menu" id="userMenu" style="display:none">
                         <button class="user-menu-btn" id="userMenuBtn">
                             <span id="userEmail"></span>
                             <span class="dropdown-arrow">▼</span>
@@ -447,14 +440,12 @@
         </div>
     </footer>
 
-    <!-- Global Error Handler -->
+    <!-- Set cached email immediately -->
     <script>
-        window.addEventListener('error', function(e) {
-            console.error('Global error:', e.error);
-        });
-        window.addEventListener('unhandledrejection', function(e) {
-            console.error('Unhandled promise rejection:', e.reason);
-        });
+        if (window.__authCached) {
+            var el = document.getElementById('userEmail');
+            if (el) el.textContent = window.__authCached;
+        }
     </script>
     <script type="module" src="assets/js/ui-interactions.js"></script>
     <script type="module" src="assets/js/quick-start-guide.js"></script>
