--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/ui-enhancements.css">
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
-    <!-- Instant auth state check - prevents flash of unauthenticated content -->
+    <!-- Instant auth state - no flash -->
     <script>
         (function() {
             try {
@@ -18,25 +18,17 @@
                     var data = JSON.parse(cached);
                     if (data && data.email && (Date.now() - data.timestamp) < 86400000) {
                         window.__authCached = data.email.split('@')[0];
-                        document.documentElement.classList.add('auth-cached');
                     }
                 }
             } catch(e) {}
         })();
     </script>
-    <style>
-        .auth-cached #signInBtn { visibility: hidden !important; opacity: 0 !important; position: absolute !important; pointer-events: none !important; }
-        .auth-cached #userMenu { visibility: visible !important; opacity: 1 !important; position: relative !important; pointer-events: auto !important; }
-        .auth-cached .auth-hidden { visibility: visible !important; opacity: 1 !important; position: relative !important; pointer-events: auto !important; }
-    </style>
+    <style>#signInBtn, #userMenu { transition: none !important; }</style>
 </head>
 <body>
     <script>
         if (window.__authCached) {
-            document.addEventListener('DOMContentLoaded', function() {
-                var el = document.getElementById('userEmail');
-                if (el && !el.textContent) el.textContent = window.__authCached;
-            });
+            document.write('<style>#signInBtn{display:none!important}#userMenu{display:block!important}</style>');
         }
     </script>
     <!-- Promotional Banner - Permanent -->
@@ -79,7 +71,7 @@
                     <button class="btn-auth" id="signInBtn">
                         <span id="authButtonText">Sign In</span>
                     </button>
-                    <div class="user-menu auth-hidden" id="userMenu">
+                    <div class="user-menu" id="userMenu" style="display:none">
                         <button class="user-menu-btn" id="userMenuBtn">
                             <span id="userEmail"></span>
                             <span class="dropdown-arrow">▼</span>
@@ -659,14 +651,12 @@
     <!-- Back to Top Button -->
     <button class="back-to-top" id="backToTop" title="Back to top">↑</button>
 
-    <!-- Global Error Handler -->
+    <!-- Set cached email immediately -->
     <script>
-        window.addEventListener('error', function(e) {
-            console.error('Global error:', e.error);
-        });
-        window.addEventListener('unhandledrejection', function(e) {
-            console.error('Unhandled promise rejection:', e.reason);
-        });
+        if (window.__authCached) {
+            var el = document.getElementById('userEmail');
+            if (el) el.textContent = window.__authCached;
+        }
     </script>
     <script type="module" src="assets/js/ui-interactions.js"></script>
     <script type="module" src="assets/js/quick-start-guide.js"></script>
